--- a/index.html
+++ b/index.html
@@ -4,12 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Apna Website</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <p><strong>Form</strong></p>
+    <h1>Apna Website</h1>
+    <nav>
+        <a href="#">Home</a>
+        <a href="#">About</a>
+        <a href="#">Contact</a>
+        <a href="#">Learn More</a>
+    </nav>
+
+    <div>
+        <p><strong>Form</strong></p>
     <a href="form.html">Click Here</a>
 
     <p><strong>Table</strong></p>
     <a href="table.html">Click Here</a>
+    </div>
 </body>
 </html>
