--- a/table.html
+++ b/table.html
@@ -14,9 +14,9 @@
         </div>
         
         <div>
-            <p>Name :- SUDHANSHU PANDEY</p>
-            <P>S/O :- Mr. ANAND PANDEY</P>
-            <p>DOB :- 1994-05-24</p>
+            <p>Name :- MOHIT KUMAR VISHKARMA</p>
+            <P>S/O :- MUKESH KUMAR</P>
+            <p>DOB :- 17-Sep-2005</p>
             <p>Gender :- Male</p>
             <hr>
         </div>
