--- a/index.html
+++ b/index.html
@@ -8,19 +8,21 @@
 </head>
 <body>
     <h1>Apna Website</h1>
-    <nav>
-        <a href="#">Home</a>
-        <a href="#">About</a>
-        <a href="#">Contact</a>
-        <a href="#">Learn More</a>
-    </nav>
 
     <div>
+        <hr>
+        <p><strong>About Me</strong></p>
+        <a href="AboutMe.html">Click Here</a>
+        <hr>
+        
+        <hr>
         <p><strong>Form</strong></p>
-    <a href="form.html">Click Here</a>
-
-    <p><strong>Table</strong></p>
-    <a href="table.html">Click Here</a>
+        <a href="form.html">Click Here</a>
+        <hr>
+        <hr>
+        <p><strong>Table</strong></p>
+        <a href="table.html">Click Here</a>
+        <hr>
     </div>
 </body>
 </html>
