--- a/table.html
+++ b/table.html
@@ -5,6 +5,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Table</title>
 </head>
+<style>
+    body{
+        background-color: cornflowerblue;
+    }
+    th{
+        color: red;
+    }
+    p{
+        color: rgb(5, 250, 5);
+    }
+    hr{
+        background-color: darkblue;
+    }
+
+</style>
 <body>
     <table>
         <div>
