--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <div>
         <hr>
-        <p><strong>About Me</strong></p>
+        <p><strong>About Me (Portfolio)</strong></p>
         <a href="AboutMe.html">Click Here</a>
         <hr>
         
