--- a/AboutMe.html
+++ b/AboutMe.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <div style="display: flex;" lab>
-    <img src="pmohit.jpg" alt="logo" height="50px" width="50px">
+    <img src="pmohit.JPG" alt="logo" height="50px" width="50px">
     <label>Apna Website</label> 
 </div>
 
@@ -29,7 +29,7 @@
     <hr>
     <div>
     <p>About Me</p>
-    <img src="pmohit.jpg" height="100px" width="100px">
+    <img src="pmohit.JPG" height="100px" width="100px">
     </div>
 
     <hr>
